modules/infra/monitoring/grafana-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: monitoring
spec:
  hosts:
  - grafana.goboolean.io
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - route:
    - destination:
        host: prometheus-grafana.monitoring.svc.cluster.local
        port:
          number: 80
