modules/infra/monitoring/prometheus-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: monitoring
spec:
  hosts:
  - prometheus.goboolean.io
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - route:
    - destination:
        host: prometheus-kube-prometheus-prometheus.monitoring.svc.cluster.local
        port:
          number: 9090
